--- a/Silicon_MVC/appsettings.json
+++ b/Silicon_MVC/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+
+    "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\ProjectsCSharp\\Silicon_ASP.Net_Identity\\Infrastructure\\Data\\local_db.mdf;Integrated Security=True;Connect Timeout=30"
+  }
 }
