dark-mode design fix

--- a/Silicon_MVC/appsettings.json
+++ b/Silicon_MVC/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\ProjectsCSharp\\Silicon_ASP.Net_Identity\\Infrastructure\\Data\\local_db.mdf;Integrated Security=True;Connect Timeout=30"
+    "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\ProjectsCSharp\\Silicon_ASP.Net_Identity\\Infrastructure\\Data\\silicon_db.mdf;Integrated Security=True;Connect Timeout=30"
   }
 }
